# recipe-manager

./: .gitignore  README.md  Ryan.md  Talha.md  pyproject.toml  schema.sql  settings.json  sumaiya.md
diagrams /src/: erd.puml
docker_composes/: docker-compose.mongodb.yaml  docker-compose.postgres.yaml
src/recipe_manager/: main.py
