[project]
name = "recipe-manager"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ryan harris zubair", email = "ryan@runicengines"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.scripts]

mongo = "docker-compose -f /home/ryan_harris/Projects/recipe-manager/docker_composes/docker-compose.mongodb.yaml up"
postgreSQL = "docker-compose -f /home/ryan_harris/Projects/recipe-manager/docker_composes/docker-compose.postgres.yaml up"
